--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_SERVER_URL = https://ecom-backend-server-wh01.onrender.com
+# VITE_SERVER_URL = https://ecom-backend-server-wh01.onrender.com
 VITE_SERVER_URL = http://localhost:4000
 VITE_UPLOAD_PRESET = ecom-images
 VITE_CLOUD_NAME = doruxa6g7
